@@ -17,6 +17,8 @@ import adalid.core.expressions.*;
 import adalid.core.interfaces.*;
 import java.lang.reflect.Field;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.MessageFormat;
 import java.util.ArrayList;
@@ -55,8 +57,8 @@ public class XS2 {
      */
     public static URL getURL(String spec) {
         try {
-            return spec == null ? null : new URL(spec);
-        } catch (MalformedURLException ex) {
+            return spec == null ? null : new URI(spec).toURL(); // new URL(spec); is deprecated since JDK 20
+        } catch (URISyntaxException | MalformedURLException ex) {
             return null;
         }
     }
